Bug 153763 - Scroll to first/last sheet buttons broken
Summary: Scroll to first/last sheet buttons broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.4....
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sheet-Tabs-Bar
  Show dependency treegraph
 
Reported: 2023-02-20 15:20 UTC by Gabor Kelemen (Collabora)
Modified: 2023-03-02 15:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file with many sheets (622.36 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-02-20 15:20 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-02-20 15:20:01 UTC
Created attachment 185496 [details]
Example file with many sheets

In Calc the bottom left Scroll to first/last sheet buttons stopped working in 7.6 master.

1. Open attached file
2. Try to navigate between the sheets with the bottom left sheet scrolling buttons
-> Scroll to Previous/Next Sheet works, Scroll to first/last sheet do not.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 14844d835cc5d6dfde499a0b1074aea5dcff4fc7
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

bibisected on linux-7.6 to:

https://git.libreoffice.org/core/+/1b180c444d0c7d8b2df66c88f0bdadfec4896b00

author	Caolán McNamara <caolanm@redhat.com>	Mon Feb 13 20:17:51 2023 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Tue Feb 14 11:33:57 2023 +0000
tree 5d907f3b743ee0eea2df9f1fb7cd8f49e6d4b77d
parent 20f3339834bedd4a62731f69c954dc6e6607bec5 [diff]

Resolves: tdf#149482 don't insert if the mouse is not still pressed

Adding CC to: Caolán McNamara
Comment 1 Commit Notification 2023-02-20 21:01:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/816b3607dd9676a343e8ee544b615e75393566d3

Resolves: tdf#153763 first/last buttons in tabbar not responding

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2023-02-20 21:03:02 UTC
done in trunk, offending patch got merged to other branches, fixes in gerrit for those affected branches
Comment 3 Commit Notification 2023-02-21 07:50:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f02c2912e50df357125c93eaaadfc96f02a05db0

Resolves: tdf#153763 first/last buttons in tabbar not responding

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-02-27 11:08:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/ae2480960e3f37c06bfb5b61e480aba62c23c065

Resolves: tdf#153763 first/last buttons in tabbar not responding

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-03-02 15:04:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-6":

https://git.libreoffice.org/core/commit/e73cdcf9e4881ccfebb2dfa35556d9b2a2adcf37

Resolves: tdf#153763 first/last buttons in tabbar not responding

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.