Resolves: tdf#153763 first/last buttons in tabbar not responding

Change-Id: Id6e70eca7c2d523643d9e38e8c7402879464bf5a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147343
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>