svtools/source/control/tabbar.cxx
@@ -884,13 +884,16 @@ void TabBar::ImplShowPage( sal_uInt16 nPos )
 
 IMPL_LINK( TabBar, ImplClickHdl, weld::Button&, rBtn, void )
 {
-    if ((GetPointerState().mnState & (MOUSE_LEFT | MOUSE_MIDDLE | MOUSE_RIGHT)) == 0)
+    if (&rBtn != mpImpl->mxButtonBox->m_xFirstButton.get() && &rBtn != mpImpl->mxButtonBox->m_xLastButton.get())
     {
-        // like tdf#149482 if we didn't see a mouse up, but find that the mouse is no
-        // longer pressed at this point, then bail
-        mpImpl->mxButtonBox->m_xPrevRepeater->Stop();
-        mpImpl->mxButtonBox->m_xNextRepeater->Stop();
-        return;
+        if ((GetPointerState().mnState & (MOUSE_LEFT | MOUSE_MIDDLE | MOUSE_RIGHT)) == 0)
+        {
+            // like tdf#149482 if we didn't see a mouse up, but find that the mouse is no
+            // longer pressed at this point, then bail
+            mpImpl->mxButtonBox->m_xPrevRepeater->Stop();
+            mpImpl->mxButtonBox->m_xNextRepeater->Stop();
+            return;
+        }
     }
 
     EndEditMode();
